# loco-puente

./: .gitignore  CHOOSING.md  HARDWARE.md  astro.config.mjs  business-case-m3-ultra.md  local-ai-stack-spec.md  locopuente-project-brief.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-images.yml  deploy-pages.yml
docs/: architecture.md  hardware.md  index.md  philosophy.md  poc.md  roadmap.md  services.md
docs-landing/: index.html
public/: CNAME
puente/: __init__.py  cli.py  compose.py  detect.py  gpu.py  models.py  portal.py
puente/dockerfiles/comfyui/: Dockerfile
puente/dockerfiles/fooocus/: Dockerfile
puente/dockerfiles/musicgen/: Dockerfile
puente/dockerfiles/nodepad/: Dockerfile
puente/dockerfiles/swarmui/: Dockerfile
puente/services/: __init__.py  anythingllm.py  base.py  citesight.py  comfyui.py  deeptutor.py  excalidraw.py  fooocus.py  jupyter.py  musicgen.py  nodepad.py  ollama.py  open_notebook.py  open_terminal.py  open_webui.py  perplexica.py  portal.py  searxng.py  speaches.py  stirling_pdf.py  swarmui.py  vane.py  voicebox.py
puente/templates/portal/: index.html.j2
src/content/docs/: architecture.md  choosing.md  hardware.md  index.mdx  poc.md  roadmap.md  services.md  stack.md
src/styles/: custom.css
