[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puente"
version = "0.1.0"
description = "Local AI stack orchestrator — privacy-first, pick-and-choose, upstream-only"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Michael Borck"}]
dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
puente = "puente.cli:app"

[tool.setuptools.packages.find]
include = ["puente*"]

[tool.setuptools.package-data]
puente = ["templates/*", "templates/**/*", "dockerfiles/**/*"]
